# airgap

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.cargo/: config.toml
.llm/: constitution.md  summary.md
airgap-core/: Cargo.toml
airgap-core/src/: lib.rs  password.rs
airgap-core/src/cfg/: language.rs  mod.rs  network.rs  rpc.rs
airgap-core/src/error/: biz_error.rs
airgap-core/src/util/: password.rs
airgap-offline/: Cargo.toml
airgap-offline/src/: main.rs
airgap-online/: Cargo.toml
airgap-online/src/: main.rs
