[package]
name = "airgap-core"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
borsh.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
thiserror.workspace = true
