[package]
name = "airgap-offline"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
iced.workspace = true
base64.workspace = true
bip39.workspace = true
bs58.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
ed25519-dalek.workspace = true
near-slip10.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
reqwest.workspace = true
sled.workspace = true
airgap-core = { path = "../airgap-core" }
