[package]
name = "airgap-online"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
base64.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
iced.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
reqwest.workspace = true
sled.workspace = true
airgap-core = { path = "../airgap-core" }
